fixed spacing between footer and body

--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  padding-bottom: 100px;
   font-family: -apple-system, BlinkMacSystemFont, "PT Mono", monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
